src/test/ui/invalid-self-argument/bare-fn-start.stderr
error: `self` parameter only allowed in associated `fn`s
  --> $DIR/bare-fn-start.rs:1:6
   |
LL | fn a(&self) { }
   |      ^^^^^ not semantically valid as function parameter
   |
   = note: associated `fn`s are those in `impl` or `trait` definitions

error: aborting due to previous error

